structural-typing/tests/ui/modify_missing_operator.stderr
error: Missing operator before field 'name' in modify!. Use: +field, -field, or ?field
  --> tests/ui/modify_missing_operator.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Invalid = user::modify!(user::AllAbsent, name);
   |                    ------------------------------------ in this macro invocation
   |
   = note: this error originates in the macro `user::modify` (in Nightly builds, run with -Z macro-backtrace for more info)
